--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
 		<div id = "timeline">
 		</div>
 		<div class = "horizontal">
-			<div class = "left">
-				<div id = "sunburst"><h4><br><br>Sunburst</h4></div>
-			</div>
-			<div class = "right">
-				<div id = "map"><h4><br><br>Map</h4></div>
-			</div>
+			<div id = "sunburst" class = "left"><h4><br><br>Sunburst</h4></div>
+			<div id = "map" class = "right"><h4><br><br>Map</h4></div>
 		</div>
 		<div id = "best-worst"><h4><br><br>Best-Worst Chart</h4></div>
 	</div>
