--- a/index.html
+++ b/index.html
@@ -22,4 +22,6 @@
 	<script src="https://d3js.org/d3.v4.js"></script>
 	<script type="application/javascript" src="scripts/script.js"></script>
 	<script type="application/javascript" src="scripts/Timeline.js"></script>
+	<script type="application/javascript" src="scripts/PerformanceChart.js"></script>
+
 </body>
