--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
 	<title>Visualising Consumer Complaints</title>
 	<link rel="stylesheet" href="assets/styles.css"/>
+	<!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
+	<script type="text/javascript" src="bower_components/d3/d3.js"></script>
+	<script type="text/javascript" src="bower_components/d3-tip/index.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js"></script>
+	<!--<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">-->
+	<!--<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">-->
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"/>
 </head>
 <style>
