--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 
 			<div id = "best-worst" class="col"><h4><br><br>Best-Worst Chart</h4>
-				<select id="inds" class = "form-control pull-right" onchange="chooseData()">
+				<select id="inds" class = "form-control pull-right">
 				<option value="Total">Total Complaints</option>
 				<option value="Disputed">Disputed Complaints</option>
 				<option value="Timely">Timely Responded Complaints</option>
@@ -69,13 +69,7 @@
 			</div>
 		</div>
 
-		<div id = "map" class = "row"><h4><br><br>Map</h4><select id="indsStates" class = "selectMapHide" onchange="chooseDataMap()">
-			<option value="Total" >Total Complaints</option>
-			<option value="Disputed">Disputed Complaints</option>
-			<option value="Timely">Timely Responded Complaints</option>
-			<option value="PercentDisputed" selected="selected">Percentage of Disputed Complaints</option>
-			<option value="PercentTimely">Percentage of Timely Response</option>
-		</select></div>
+		<div id = "map" class = "row"><h4><br><br>Map</h4></div>
 
 	</div>
 
