--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 			</div>
 
-			<div class="col">
+			<div class="col" id="rightPanel">
 				<div id = "best-worst" class="row"><br></div>
 				<div id = "map" class = "row"><br></div>
 			</div>
