--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 				<li class="nav-item">
 					<a class="nav-link" href="Process%20Book.pdf">Process Book</a>
 				</li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="https://youtu.be/PDTcJAlrnNc">Screen Cast</a>
+                </li>
 			</ul>
 		</div>
 	</nav>
